<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Theme.Scales_app2.background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dayNight_tv"
            style="@style/Theme.Scales_app2.settingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="88dp"
            android:fontFamily="@font/interv"
            android:text="@string/day_night"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deleteAll_tv"
            style="@style/Theme.Scales_app2.settingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/interv"
            android:text="@string/delete_all"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="@+id/deleteHistory_tv"
            app:layout_constraintTop_toBottomOf="@+id/deleteHistory_tv" />

        <TextView
            android:id="@+id/deleteHistory_tv"
            style="@style/Theme.Scales_app2.settingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/interv"
            android:text="@string/delete_history"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="@+id/deleteFavs_tv"
            app:layout_constraintTop_toBottomOf="@+id/deleteFavs_tv" />

        <TextView
            android:id="@+id/deleteFavs_tv"
            style="@style/Theme.Scales_app2.settingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/interv"
            android:text="@string/delete_favorites"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="@+id/dayNight_tv"
            app:layout_constraintTop_toBottomOf="@+id/dayNight_tv" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/day_night_switch"
            style="@style/Theme.Scales_app2.switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:thumbTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/dayNight_tv"
            app:layout_constraintStart_toEndOf="@+id/dayNight_tv"
            app:layout_constraintTop_toTopOf="@+id/dayNight_tv" />

        <Button
            android:id="@+id/button"
            style="@style/Theme.Scales_app2.primaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/interv"
            android:padding="0dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="@+id/deleteFavs_tv"
            app:layout_constraintStart_toStartOf="@+id/day_night_switch"
            app:layout_constraintTop_toTopOf="@+id/deleteFavs_tv" />

        <Button
            android:id="@+id/button2"
            style="@style/Theme.Scales_app2.primaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/interv"
            android:padding="0dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="@+id/deleteHistory_tv"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/deleteHistory_tv" />

        <Button
            android:id="@+id/button3"
            style="@style/Theme.Scales_app2.primaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/interv"
            android:padding="0dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="@+id/deleteAll_tv"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/deleteAll_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>